--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -4,6 +4,7 @@
 }
 body{
     background-color: black;
+    animation: strobe 0.25s infinite;
 }
 h1{
     color:red;
@@ -15,3 +16,13 @@ p {
 img{
     width: 50px;
 }
+@keyframes strobe {
+    0%, 49% {
+      background-color: rgb(117, 209, 63);
+      border: 3px solid #e50000;
+    }
+    50%, 100% {
+      background-color: #e50000;
+      border: 3px solid rgb(117, 209, 63);
+    }
+  }
